--- a/public/minimal/index.html
+++ b/public/minimal/index.html
@@ -18,7 +18,7 @@
       </figure>
     </section>
 
-    <section id="errors"></section>
+    <section id="errors" class="errors"></section>
 
     <section>
       <form method="post" action="/api/subscriptions/new">
