Adds 3-D Secure support to PHP example

--- a/public/advanced-pricing/index.html
+++ b/public/advanced-pricing/index.html
@@ -4,7 +4,7 @@
     <title>Recurly.js Example: Advanced Pricing</title>
     <script src="https://js.recurly.com/v4/recurly.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="/config.js"></script>
+    <script src="/config"></script>
     <link href="/js/favicon.png" rel="shortcut icon" type="image/png">
     <link href="https://js.recurly.com/v4/recurly.css" rel="stylesheet" type="text/css">
     <link href="//fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
