--- a/public/gift-cards/index.html
+++ b/public/gift-cards/index.html
@@ -4,7 +4,7 @@
     <title>Recurly.js Example: Gift Cards</title>
     <script src="https://js.recurly.com/v4/recurly.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="/config.js"></script>
+    <script src="/config"></script>
     <link href="https://js.recurly.com/v4/recurly.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
     <link href="/minimal/style.css" rel="stylesheet">
