--- a/public/gift-cards/index.html
+++ b/public/gift-cards/index.html
@@ -23,7 +23,7 @@
     <section>
       <form method="post" action="/api/subscriptions/new">
         <div>
-          <div data-recurly="card"></div>
+          <div data-my-js-ref="recurly-element-card"></div>
         </div>
 
         <div>
@@ -47,18 +47,20 @@
       </form>
     </section>
     <script>
-      // Configure recurly.js
-      recurly.configure({
-        publicKey: window.recurlyConfig.publicKey, // Set this to your own public key
+      // Configure recurly.js -- set this to your own public key
+      recurly.configure(window.recurlyConfig.publicKey);
+
+      // Create a CardElement
+      var elements = recurly.Elements();
+      var cardElement = elements.CardElement({
         style: {
-          all: {
-            fontFamily: 'Open Sans',
-            fontSize: '1rem',
-            fontWeight: 'bold',
-            fontColor: '#2c0730'
-          }
+          fontFamily: 'Open Sans',
+          fontSize: '1rem',
+          fontWeight: 'bold',
+          fontColor: '#2c0730'
         }
       });
+      cardElement.attach('[data-my-js-ref="recurly-element-card"]');
 
       // On form submit, we stop submission to go get the token
       $('form').on('submit', function (event) {
@@ -78,7 +80,7 @@
         // Now we call recurly.token with the form. It goes to Recurly servers
         // to tokenize the credit card information, then injects the token into the
         // data-recurly="token" field above
-        recurly.token(form, function (err, token) {
+        recurly.token(elements, form, function (err, token) {
 
           // send any errors to the error function below
           if (err) error(err);
