--- a/public/minimal/index.html
+++ b/public/minimal/index.html
@@ -23,7 +23,7 @@
     <section>
       <form method="post" action="/api/subscriptions/new">
         <div>
-          <div data-recurly="card"></div>
+          <div data-my-js-ref="recurly-element-card"></div>
         </div>
 
         <div>
@@ -42,21 +42,23 @@
       </form>
     </section>
     <script>
-      // Configure recurly.js
-      recurly.configure({
-        publicKey: window.recurlyConfig.publicKey, // Set this to your own public key
+      // Configure recurly.js -- set this to your own public key
+      recurly.configure(window.recurlyConfig.publicKey);
+
+      // Create a CardElement
+      var elements = recurly.Elements();
+      var cardElement = elements.CardElement({
         style: {
-          all: {
-            fontFamily: 'Open Sans',
-            fontSize: '1rem',
-            fontWeight: 'bold',
-            fontColor: '#2c0730'
-          }
+          fontFamily: 'Open Sans',
+          fontSize: '1rem',
+          fontWeight: 'bold',
+          fontColor: '#2c0730'
         }
       });
+      cardElement.attach('[data-my-js-ref="recurly-element-card"]');
 
-      // When a customer hits their 'enter' key while in a field
-      recurly.on('field:submit', function (event) {
+      // When a customer hits their 'enter' key while using the card element
+      cardElement.on('submit', function (event) {
         $('form').submit();
       });
 
@@ -78,7 +80,7 @@
         // Now we call recurly.token with the form. It goes to Recurly servers
         // to tokenize the credit card information, then injects the token into the
         // data-recurly="token" field above
-        recurly.token(form, function (err, token) {
+        recurly.token(elements, form, function (err, token) {
 
           // send any errors to the error function below
           if (err) error(err);
@@ -88,27 +90,6 @@
 
         });
       });
-
-      // Reconfigure font size based on window size
-      $(window).on('resize init', function (event) {
-        if ($(this).width() < 600) {
-          recurly.configure({
-            style: {
-              all: {
-                fontSize: '0.9rem'
-              }
-            }
-          });
-        } else {
-          recurly.configure({
-            style: {
-              all: {
-                fontSize: '1rem'
-              }
-            }
-          });
-        }
-      }).triggerHandler('init');
 
       // A simple error handling function to expose errors to the customer
       function error (err) {
