--- a/public/advanced-pricing/index.html
+++ b/public/advanced-pricing/index.html
@@ -25,18 +25,19 @@
       <label for="plan-quantity">Quantity</label>
       <input type="text" data-recurly="plan_quantity" id="plan-quantity" value="2">
 
-      <label for="number">Card Number</label>
-      <div data-recurly="number" id="number"></div>
-      <label for="month">Month</label>
-      <div data-recurly="month" id="month"></div>
-      <label for="year">Year</label>
-      <div data-recurly="year" id="year"></div>
-      <label for="cvv">CVV</label>
-      <div data-recurly="cvv" id="cvv"></div>
-      <label for="first_name">First Name</label>
-      <input type="text" data-recurly="first_name" id="first_name" name="first-name">
-      <label for="last_name">Last Name</label>
-      <input type="text" data-recurly="last_name" id="last_name" name="last-name">
+      <div>
+        <div data-my-js-ref="recurly-element-card"></div>
+      </div>
+
+      <div>
+        <label for="first_name">First Name</label>
+        <input type="text" data-recurly="first_name" id="first_name" name="first-name">
+      </div>
+
+      <div>
+        <label for="last_name">Last Name</label>
+        <input type="text" data-recurly="last_name" id="last_name" name="last-name">
+      </div>
 
       <label for="country">Country</label>
       <select id="country" data-recurly="country">
@@ -115,30 +116,23 @@
       <div id="errors"></div>
     </form>
     <script>
-      // Configure recurly.js
-      recurly.configure({
-        publicKey: window.recurlyConfig.publicKey, // Set this to your own public key
+      // Configure recurly.js -- set this to your own public key
+      recurly.configure(window.recurlyConfig.publicKey);
+
+      // Create a CardElement
+      var elements = recurly.Elements();
+      var cardElement = elements.CardElement({
         style: {
-          all: {
-            fontFamily: 'Open Sans',
-            fontSize: '1rem',
-            fontWeight: 'bold',
-            fontColor: '#2c0730'
-          },
-          number: {
-            placeholder: 'Card number'
-          },
-          month: {
-            placeholder: 'mm'
-          },
-          year: {
-            placeholder: 'yy'
-          }
+          fontFamily: 'Open Sans',
+          fontSize: '1rem',
+          fontWeight: 'bold',
+          fontColor: '#2c0730'
         }
       });
+      cardElement.attach('[data-my-js-ref="recurly-element-card"]');
 
-      // When a customer hits their 'enter' key while in a field
-      recurly.on('field:submit', function (event) {
+      // When a customer hits their 'enter' key while using the card element
+      cardElement.on('submit', function (event) {
         $('form').submit();
       });
 
@@ -160,7 +154,7 @@
         // Now we call recurly.token with the form. It goes to Recurly servers
         // to tokenize the credit card information, then injects the token into the
         // data-recurly="token" field above
-        recurly.token(this, function (err, token) {
+        recurly.token(elements, this, function (err, token) {
 
           // send any errors to the error function below
           if (err) error(err);
