--- a/public/adyen/index.html
+++ b/public/adyen/index.html
@@ -11,11 +11,11 @@
   </head>
   <body>
     <script>
-      var adyen = recurly.Adyen({});
+      var adyen = recurly.Adyen();
 
       adyen.on('token', function (response) {
-        console.log(response)
-        alert(response.authResult)
+        console.log(response);
+        alert(response.authResult);
       });
 
       $("#adyen-subscribe").on('click', function (event) {
@@ -23,10 +23,10 @@
         event.preventDefault();
         // Start the adyen checkout flow;
         // These values can come from a checkout form, or can be hard-coded
-        // Depending on the use case. 
+        // Depending on the use case.
         var payload = {invoiceUuid: "aasdf1234", skinCode: "1234asdf", countryCode: "PL", shopperLocale: "en_PL"};
         adyen.start(payload);
-      }); 
+      });
     </script>
 
     <form id="rig-payment-form" action="#">
