--- a/public/catalog/index.html
+++ b/public/catalog/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Recurly.js Example: Minimal Billing Information</title>
+    <title>Recurly.js Example: Catalog</title>
     <script src="https://js.recurly.com/v4/recurly.js"></script>
     <script src="/config"></script>
     <link href="https://js.recurly.com/v4/recurly.css" rel="stylesheet" type="text/css">
@@ -18,24 +18,23 @@
     </section>
 
     <section>
-      <form method="post" action="/api/subscriptions/new">
+      <form method="post" action="/api/purchses/new">
         <div>
-          <label for="last_name">Select a plan</label>
-          <select name="plan" id="plan" data-recurly="plan">
-            <option value="plan-a">plan-a</option>
-            <option value="plan-b">plan-b</option>
-          </select>
+          <label for="plan">Select a plan</label>
+          <select name="plan" id="plan" data-recurly="plan"></select>
         </div>
         <div class="items">
-          <label for="item">Select items</label>
-          <div class="item">
-            <label for="item">item-a</label>
-            <input
-              type="checkbox"
-              data-recurly="adjustment"
-              data-recurly-adjustment-item-code="item-a"
-            >
-          </div>
+          <div class="label">Select items</div>
+          <div class="items-select"></div>
+        </div>
+        <div>
+          <label for="first_name">First Name</label>
+          <input type="text" data-recurly="first_name" id="first_name" name="first-name">
+        </div>
+
+        <div>
+          <label for="last_name">Last Name</label>
+          <input type="text" data-recurly="last_name" id="last_name" name="last-name">
         </div>
         <div>
           <div data-recurly="card"></div>
@@ -48,6 +47,10 @@
     </section>
     <script>
       const { publicKey, plans, items } = window.recurlyConfig;
+      const form = document.querySelector('form');
+      const button = document.querySelector('button');
+      const plan = document.querySelector('#plan')
+      const itemsSelect = document.querySelector('.items-select');
 
       // Configure recurly.js
       recurly.configure({
@@ -62,18 +65,60 @@
         }
       });
 
+      // Configure form submission
+      // On form submit, we stop submission to go get the token
+      form.addEventListener('submit', function (event) {
+        // Prevent the form from submitting while we retrieve the token from Recurly
+        event.preventDefault();
+
+        // Disable the submit button
+        button.setAttribute('disabled', true);
+
+        // Now we call recurly.token with the form. It goes to Recurly servers
+        // to tokenize the credit card information, then injects the token into the
+        // data-recurly="token" field above
+        recurly.token(form, function (err, token) {
+
+          // send any errors to the error function below
+          if (err) throw err;
+
+          // Otherwise we continue with the form submission
+          else form.submit();
+
+        });
+      });
+
+      // Render plans
+      let plansEl = ''
+      for (const plan of plans) {
+        plansEl += `<option value="${plan}">${plan}</option>`
+      }
+      plan.innerHTML = plansEl;
+
+      // Render items
+      let itemsEl = ''
+      for (const item of items) {
+        itemsEl += `
+          <div class="item">
+            <input
+            type="checkbox"
+            data-recurly="adjustment"
+            data-recurly-adjustment-item-code="${item}"
+            id="${item}"
+            >
+            <label for="${item}">${item}</label>
+          </div>
+        `
+      }
+      itemsSelect.innerHTML = itemsEl;
+
       // Configure pricing
-      const form = document.querySelector('form');
       const checkoutPricing = recurly.Pricing.Checkout();
       checkoutPricing.attach(form);
       checkoutPricing.on('change', price => {
         const priceEl = document.querySelector('.price');
         priceEl.textContent = price.now.subtotal;
       });
-
-      // Render plans
-
-      // Render items
     </script>
   </body>
 </html>
