--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <ul>
       <li><a href="minimal/index.html">Minimal billing information</a></li>
       <li><a href="advanced-pricing/index.html">Advanced pricing features</a></li>
+      <li><a href="advanced-pricing-items/index.html">Advanced pricing with items</a></li>
       <li><a href="advanced-tax/index.html">Advanced tax features</a></li>
       <li><a href="advanced-bank-account/index.html">Advanced bank account</a></li>
       <li><a href="apple-pay/index.html">Apple Pay</a></li>
