--- a/public/advanced-pricing-items/index.html
+++ b/public/advanced-pricing-items/index.html
@@ -18,26 +18,28 @@
       </figure>
     </section>
 
+    <section id="errors" class="errors"></section>
+
     <section>
       <form method="post" action="/api/purchses/new">
         <div>
           <label for="plan">Select a plan</label>
-          <select name="plan" id="plan" data-recurly="plan"></select>
+          <select name="subscriptions[][plan-code]" class="js-plan-select" id="plan"></select>
         </div>
 
         <div class="items">
           <div class="label">Select items</div>
-          <div class="items-select"></div>
+          <div class="js-items-select"></div>
         </div>
 
         <div>
-          <label for="first_name">First Name</label>
-          <input type="text" data-recurly="first_name" id="first_name" name="first-name">
+          <label for="first-name">First Name</label>
+          <input type="text" data-recurly="first_name" name="first-name" id="first-name">
         </div>
 
         <div>
-          <label for="last_name">Last Name</label>
-          <input type="text" data-recurly="last_name" id="last_name" name="last-name">
+          <label for="last-name">Last Name</label>
+          <input type="text" data-recurly="last_name" name="last-name" id="last-name">
         </div>
 
         <div>
@@ -48,17 +50,21 @@
           <div class="label">Total</div>
           <div class="subtotal">
             <div>
-              Due now <span class="float-right">
-                <span data-recurly="currency_symbol"></span><span data-recurly="total_now"></span>
+              Due now
+              <span class="float-right">
+                <span data-recurly="currency_symbol"></span>
+                <span data-recurly="total_now"></span>
               </span>
             </div>
             <div class="text-muted">
-              <span data-recurly="currency_symbol"></span><span data-recurly="total_next"></span> due next month.
+              <span data-recurly="currency_symbol"></span>
+              <span data-recurly="total_next"></span>
+              due next month.
             </div>
           </div>
         </div>
 
-        <button id="subscribe">Subscribe</button>
+        <button>Subscribe</button>
 
         <input type="hidden" data-recurly="token" name="recurly-token">
       </form>
@@ -67,8 +73,8 @@
       const { publicKey, plans, items } = window.recurlyConfig;
       const form = document.querySelector('form');
       const button = document.querySelector('button');
-      const plan = document.querySelector('#plan')
-      const itemsSelect = document.querySelector('.items-select');
+      const planSelect = document.querySelector('.js-plan-select')
+      const itemsSelect = document.querySelector('.js-items-select');
 
       // Configure recurly.js
       recurly.configure({
@@ -90,7 +96,10 @@
         event.preventDefault();
 
         // Disable the submit button
-        // button.setAttribute('disabled', true);
+        button.setAttribute('disabled', true);
+        for (const el of document.querySelectorAll('[data-recurly]')) {
+          el.classList.remove('error');
+        }
 
         // Now we call recurly.token with the form. It goes to Recurly servers
         // to tokenize the credit card information, then injects the token into the
@@ -98,19 +107,20 @@
         recurly.token(form, function (err, token) {
 
           // send any errors to the error function below
-          if (err) throw err;
+          if (err) error(err);
 
           // Otherwise we continue with the form submission
           else form.submit();
+
         });
       });
 
       // Render plans
-      let plansEl = ''
+      let planOptions = '<option value="">None</option>';
       for (const plan of plans) {
-        plansEl += `<option value="${plan.code}">${plan.name}</option>`
+        planOptions += `<option value="${plan.code}">${plan.name}</option>`;
       }
-      plan.innerHTML = plansEl;
+      planSelect.innerHTML = planOptions;
 
       // Render items
       let itemsEl = ''
@@ -126,19 +136,39 @@
                 type="checkbox"
                 data-recurly="adjustment"
                 data-recurly-adjustment-item-code="${item.code}"
-                id="${item.code}"
-                name="items[]"
+                name="items[][item-code]"
+                id="item-${item.code}"
                 value="${item.code}"
               >
-              <label for="${item.code}">${item.name} <span class="float-right">${currency_symbol}${unit_amount}</span></label>
+              <label for="item-${item.code}">${item.name} <span class="float-right">${currency_symbol}${unit_amount}</span></label>
             </div>
-          `
+          `;
         }
         itemsSelect.innerHTML = itemsEl;
       }).then(() => {
         const checkoutPricing = recurly.Pricing.Checkout();
         checkoutPricing.attach(form);
-      })
+        planSelect.addEventListener('change', function (event) {
+          const { value } = this;
+          if (value) {
+            this.setAttribute('data-recurly', 'plan');
+          } else {
+            this.removeAttribute('data-recurly');
+          }
+          checkoutPricing.attach(form);
+        });
+      });
+
+      // A simple error handling function to expose errors to the customer
+      function error (err) {
+        document.querySelector('#errors').innerText = 'The following fields appear to be invalid: ' + err.fields.join(', ');
+        button.removeAttribute('disabled');
+        err.fields.forEach(function (field) {
+          if (~['number', 'month', 'year', 'cvv'].indexOf(field)) field = 'card';
+          const input = document.querySelector('[data-recurly=' + field + ']');
+          if (input) input.classList.add('error');
+        });
+      }
     </script>
   </body>
 </html>
