--- a/public/advanced-pricing-items/index.html
+++ b/public/advanced-pricing-items/index.html
@@ -21,7 +21,7 @@
     <section id="errors" class="errors"></section>
 
     <section>
-      <form method="post" action="/api/subscriptions/new">
+      <form method="post" action="/api/purchases/new">
         <div>
           <label for="plan">Select a plan</label>
           <select name="subscriptions[][plan-code]" class="js-plan-select" id="plan"></select>
