--- a/public/fraud-detection/recurly-kount.html
+++ b/public/fraud-detection/recurly-kount.html
@@ -47,7 +47,7 @@
         // Set this to your own public key
         publicKey: window.recurlyConfig.publicKey,
         // If using the Recurly Fraud protection or Kount direct integration, set the following
-        fraud: { kount: { dataCollector: true } };
+        fraud: { kount: { dataCollector: true } }
       });
 
       // Create a CardElement
