Fixes recurly.js source in advanced-bank-account example

--- a/public/advanced-bank-account/index.html
+++ b/public/advanced-bank-account/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Recurly.js Example: Advanced Pricing</title>
-    <script src="https://js.lvh.me:8020/build/recurly.js"></script>
+    <script src="https://js.recurly.com/v4/recurly.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="/config"></script>
     <link href="/js/favicon.png" rel="shortcut icon" type="image/png">
