--- a/js-snippets/index.html
+++ b/js-snippets/index.html
@@ -12,7 +12,12 @@
   </head>
 
   <body>
-    <div id="card"></div>
+    <form>
+      <input type="text" data-recurly="first_name" placeholder="First name" />
+      <input type="text" data-recurly="last_name" placeholder="Last name" />
+      <div id="card"></div>
+      <button>Submit</button>
+    </form>
     <script src="src/index.js"></script>
   </body>
 </html>
