--- a/js-snippets/index.html
+++ b/js-snippets/index.html
@@ -16,6 +16,10 @@
       <input type="text" data-recurly="first_name" placeholder="First name" />
       <input type="text" data-recurly="last_name" placeholder="Last name" />
       <div id="card"></div>
+      <div id="number"></div>
+      <div id="month"></div>
+      <div id="year"></div>
+      <div id="cvv"></div>
       <button>Submit</button>
     </form>
     <script src="src/index.js"></script>
