--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
       <li><a href="fraud-detection/recurly-kount.html">Fraud detection (Recurly and Kount direct integrations)</a></li>
       <li><a href="fraud-detection/braintree.html">Fraud detection (Braintree integration)</a></li>
       <li><a href="3d-secure/index.html">3-D Secure</a></li>
+      <li><a href="vue/index.html">Vue</a></li>
     </ul>
   </body>
 </html>
