--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <body>
     <ul>
       <li><a href="minimal/index.html">Minimal billing information</a></li>
+      <li><a href="account-update/index.html">Account update</a></li>
       <li><a href="advanced-pricing/index.html">Advanced pricing features</a></li>
       <li><a href="advanced-pricing-items/index.html">Advanced pricing with items</a></li>
       <li><a href="advanced-tax/index.html">Advanced tax features</a></li>
